--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -1,3 +1,86 @@
+.detail {
+  width:70vw;
+  height: 100%;
+  margin:40px auto;
+  background:#ffffff;
+  &__top {
+    width:100%;
+    padding:0 25px;
+    min-height:100px;
+    border-bottom:solid 2px #c0c0c0;
+    h1 {
+      font-size:24px;
+      font-weight:600;
+      padding:10px;
+      text-align: center;
+    }
+    p {
+      height:100%;
+      color:rgb(100, 100, 100);
+    }
+  }
+  &__middle {
+    width:100%;
+    display:flex;
+    &__img{
+      width:550px;
+      height:400px;
+      margin:20px 0 0 20px;
+    }
+    &__stuffs {
+      width: calc( 100% - 550px);
+      margin:20px;
+      table {
+        width:90%;
+        margin: 0 auto;
+        tr {
+          border-bottom:solid 1px rgb(150, 150, 150);
+        }
+      }
+      &__top {
+        > th {
+          font-size:18px;
+          font-weight: 600;
+          text-align:center;
+        }
+      }
+      &__left {
+        padding-left:5px;
+      }
+      &__right {
+        text-align:right;
+        padding-right:5px;
+      }
+    }
+  }
+  &__bottom {
+    width:95%;
+    height:100%;
+    margin:20px auto 0;
+    padding-bottom:20px;
+    > p {
+      font-size:20px;
+      font-weight: 600;
+      color:rgb(255, 180, 94);
+    }
+    &__recipe {
+      flex-wrap: wrap;
+      display:flex;
+      &__list {
+        width:32%;
+        height:300px;
+        margin:5px;
+        border:solid 1px;
+      }
+    }
+  }
+}
+
+
+
+
+
+
 .title {
   font-size:24px;
   font-weight:600;
