--- a/app/views/foods/_recipe_fields.html.haml
+++ b/app/views/foods/_recipe_fields.html.haml
@@ -1,4 +1,3 @@
-.resipe_nested-fields
-  %p 工程
+.nested-fields.recipe_input
   = f.text_field :process
   = link_to_remove_association '削除', f, class: 'remove-btn'
