--- a/app/views/foods/_foodstuff_fields.html.haml
+++ b/app/views/foods/_foodstuff_fields.html.haml
@@ -1,6 +1,6 @@
-.foodstuffs_nested-fields
-  %p 材料
+.nested-fields.foodstuff_input
+  = f.label "材料"
   = f.text_field :material
-  %p 量
+  = f.label "分量"
   = f.text_field :amount
   = link_to_remove_association '削除', f, class: 'remove-btn'
