--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -65,6 +65,7 @@ header {
   &__contents {
     width: calc( 98vw - 400px);
     height: calc( 100% - 40px);
+    margin-bottom:60px;
     float: left;
     background: #fff;
     &__top {
@@ -88,7 +89,7 @@ header {
   }
 
   &__food {
-    width: 22%;
+    width: 31%;
     height: 300px;
     margin: 10px;
     border: solid 1px gray;
