--- a/app/views/foods/index.html.haml
+++ b/app/views/foods/index.html.haml
@@ -4,6 +4,9 @@
   .main__side
     .main__side__search
       %p 検索フォーム
+      = form_with url: search_path, method: :get ,local: true do |f|
+        = f.text_field :search, placeholder: "何を検索しますか？"
+        = f.submit "検索"
 
   .main__contents
     .main__contents__top
@@ -13,9 +16,12 @@
     .main__contents__bottom
       - @foods.each do |food|
         .main__food
-          = image_tag food.image.url, class: "main__food__img"
-          .main__food__name
-            = link_to "#{food.food_name}", "foods/#{food.id}"
+          = link_to "foods/#{food.id}" do
+            %p
+              = food.text
+            = image_tag food.image.url, class: "main__food__img"
+            .main__food__name
+              = food.food_name
 
     .main__contents__top
       %p カテゴリーB
