--- a/app/views/foods/_header.html.haml
+++ b/app/views/foods/_header.html.haml
@@ -3,19 +3,24 @@
     .header__top
       = link_to "Bon repas", "/"
     .header__bottom
-      .header__bottom__menu
-        %p MENU
       .header__bottom__sign
         - if user_signed_in?
-          .header__bottom__sign__banner
-            = link_to "/" do
-              %span いいね！一覧
-            = link_to new_food_path do
-              %span 投稿する
-            = link_to "/mypage/#{current_user.id}" do
-              %span マイページ
+          %ul
+            %li
+              = link_to new_food_path do
+                %p Recipe
+                %span 投稿する
+            %li
+              = link_to "/mypage/#{current_user.id}" do
+                %p Mypage
+                %span マイページ
         - else
-          .header__bottom__sign_up
-            = link_to "会員登録", new_user_registration_path
-          .header__bottom__sign_in
-            = link_to "ログイン", new_user_session_path
+          %ul
+            %li
+              = link_to new_user_registration_path do
+                %p Sign Up
+                %span 会員登録
+            %li
+              = link_to new_user_session_path do
+                %p Sign in
+                %span ログイン
