--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -10,6 +10,7 @@
     min-height:100px;
     border-bottom:solid 2px #c0c0c0;
     h1 {
+      color:rgb(125, 148, 10);
       font-size:24px;
       font-weight:600;
       padding:10px;
@@ -24,7 +25,7 @@
     width:100%;
     display:flex;
     &__img{
-      width:550px;
+      width:450px;
       height:400px;
       margin:20px 0 0 20px;
     }
@@ -58,9 +59,10 @@
     width:95%;
     height:100%;
     margin:20px auto 0;
-    padding-bottom:20px;
+    padding:20px 0;
+    border-top:solid 1px rgb(196, 196, 196);
     > p {
-      font-size:20px;
+      font-size:24px;
       font-weight: 600;
       color:rgb(255, 180, 94);
     }
