--- a/app/views/foods/index.html.haml
+++ b/app/views/foods/index.html.haml
@@ -4,9 +4,15 @@
   .main__side
     .main__side__search
       %p 検索フォーム
+      %p 料理名で検索
       = form_with url: search_path, method: :get ,local: true do |f|
         = f.text_field :search, placeholder: "何を検索しますか？"
         = f.submit "検索"
+      %p 食材で検索
+      = form_with url: search_path, method: :get ,local: true do |f|
+        = f.text_field :material, placeholder: "何で検索しますか？"
+        = f.submit "検索"
+        -#  カテゴリーで検索
 
   .main__contents
     .main__contents__top
@@ -16,9 +22,9 @@
     .main__contents__bottom
       - @foods.each do |food|
         .main__food
-          = link_to "foods/#{food.id}" do
-            %p
-              = food.text
+          %p
+            = food.text
+          = link_to "foods/#{food.id}" ,class: "food__list" do
             = image_tag food.image.url, class: "main__food__img"
             .main__food__name
               = food.food_name
