--- a/app/views/foods/search.html.haml
+++ b/app/views/foods/search.html.haml
@@ -4,22 +4,28 @@
   .main__side
     .main__side__search
       %p 検索フォーム
-      = form_with uyl: search_path, method: :get, local: true do |f|
+      %p 料理名で検索
+      = form_with url: search_path, method: :get ,local: true do |f|
         = f.text_field :search, placeholder: "何を検索しますか？"
-        = button_tag type: "submit" do
-          %p 検索
+        = f.submit "検索"
+      %p 食材で検索
+      = form_with url: search_path, method: :get ,local: true do |f|
+        = f.text_field :material, placeholder: "何で検索しますか？"
+        = f.submit "検索"
 
   .main__contents
     .main__contents__top
-      %p
-        = "#{@input}の検索結果"
-
+      - if @input.length != 0
+        %p
+          = "#{@input}の検索結果"
+      - else
+        %p 全てのレシピ一覧
     .main__contents__bottom
       - @foods.each do |food|
-        .main__food
-          = link_to "foods/#{food.id}" do
-            %p
-              = food.text
+        .main__food.search__food
+          %p
+            = food.text
+          = link_to "foods/#{food.id}" ,class: "food__list" do
             = image_tag food.image.url, class: "main__food__img"
             .main__food__name
               = food.food_name
