--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -3,12 +3,14 @@
   height: 100%;
   margin:40px auto;
   background:#ffffff;
-  border:solid 1px rgb(200, 200, 200);
+  border:solid 1px rgb(255, 123, 0);
+  border-radius:5px;
+
   &__top {
     width:100%;
     padding:0 25px;
     min-height:100px;
-    border-bottom:solid 2px #c0c0c0;
+    border-bottom:solid 2px #ffdda9;
     h1 {
       color:rgb(125, 148, 10);
       font-size:24px;
@@ -60,7 +62,7 @@
     height:100%;
     margin:20px auto 0;
     padding:20px 0;
-    border-top:solid 1px rgb(196, 196, 196);
+    border-top:solid 1px #ffdda9;
     > p {
       font-size:24px;
       font-weight: 600;
@@ -73,7 +75,7 @@
       &__list {
         width:20%;
         min-height:150px;
-        margin:20px;
+        margin:5px 20px;
         padding:5px 10px;
         background:rgb(255, 230, 183);
         border:solid 1px rgb(207, 207, 207);
