--- a/app/assets/stylesheets/_new.scss
+++ b/app/assets/stylesheets/_new.scss
@@ -13,7 +13,7 @@
     font-weight:600;
     text-align:center;
     padding:20px;
-    border-bottom:solid 1px rgb(200, 200, 200);
+    border-bottom:solid 1px #ffdda9;
   }
   &__input {
     margin: 40px 0;
