--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -98,7 +98,23 @@ header {
       border:solid 1px rgb(255, 123, 0);
       border-radius:5px;
       background: #fff;
+      padding:20px;
       margin: 0px auto;
+      h1 {
+        font-size:20px;
+        font-weight:600;
+        color:rgb(226, 90, 0);
+        margin-bottom:10px;
+      }
+      .search__input {
+        width:260px;
+        height:30px;
+        + input {
+          position:relative;
+          left:218px;
+          margin-bottom:10px;
+        }
+      }
     }
   }
   &__contents {
