--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -5,7 +5,6 @@
   background:#ffffff;
   border:solid 1px rgb(255, 123, 0);
   border-radius:5px;
-
   &__top {
     width:100%;
     padding:0 25px;
@@ -91,4 +90,9 @@
       }
     }
   }
+}
+
+.emphasis {
+  font-weight:600;
+  text-align:center
 }
