--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -59,7 +59,7 @@
   &__bottom {
     width:95%;
     height:100%;
-    margin:20px auto 0;
+    margin:20px auto 20px;
     padding:20px 0;
     border-top:solid 1px #ffdda9;
     > p {
@@ -69,6 +69,7 @@
     }
     &__recipe {
       margin-left:60px;
+      margin-bottom:30px;
       flex-wrap: wrap;
       display:flex;
       &__list {
@@ -77,7 +78,8 @@
         margin:5px 20px;
         padding:5px 10px;
         background:rgb(255, 230, 183);
-        border:solid 1px rgb(207, 207, 207);
+        border:solid 1px rgb(255, 123, 0);
+        border-radius:5px;
         span {
           font-size:20px;
           font-weight:600;
@@ -88,6 +90,17 @@
           font-weight:600;
         }
       }
+    }
+    &__point {
+      background:rgb(255, 230, 183);
+      width:50%;
+      min-height:100px;
+      margin-left:60px;
+      padding:10px;
+      border:solid 1px rgb(255, 123, 0);
+      border-radius:5px;
+      color:rgb(100, 100, 100);
+      font-weight:600;
     }
   }
 }
