--- a/app/views/foods/_foodstuff_fields.html.haml
+++ b/app/views/foods/_foodstuff_fields.html.haml
@@ -1,6 +1,6 @@
 .nested-fields.foodstuff_input
   = f.label "材料"
-  = f.text_field :material
+  = f.text_field :material, placeholder: "  例) 豚肉"
   = f.label "分量"
-  = f.text_field :amount
+  = f.text_field :amount, placeholder: "  例) 200g"
   = link_to_remove_association '削除', f, class: 'remove-btn'
