--- a/app/views/foods/_recipe_fields.html.haml
+++ b/app/views/foods/_recipe_fields.html.haml
@@ -1,3 +1,3 @@
 .nested-fields.recipe_input
-  = f.text_field :process
+  = f.text_field :process, placeholder: "  例) 豚肉を食べやすい大きさに切ってください"
   = link_to_remove_association '削除', f, class: 'remove-btn'
