--- a/app/views/foods/new.html.haml
+++ b/app/views/foods/new.html.haml
@@ -7,22 +7,22 @@
       .new__input
         = f.label "料理名"
         %span 必須
-        = f.text_field :food_name
+        = f.text_field :food_name, placeholder: "  料理名を入力してください"
 
       .new__input
         = f.label "画像"
         %span 必須
-        = f.file_field :image
+        = f.file_field :image, placeholder: "  画像を添付してください"
 
       .new__input
         = f.label "説明"
         %span 必須
-        = f.text_field :text
+        = f.text_field :text, placeholder: "  料理の説明文を入力してください"
 
       .new__input
         = f.label "カテゴリー"
         %span 必須
-        = f.text_field :category_id
+        = f.select :category_id, [["カテゴリーを選択してください",""], ["和食","和食"], ["洋食","洋食"], ["中華","中華"], ["弁当","弁当"], ["おかず","おかず"]], {}, {class: "new__category"}
 
       .new__input
         = f.label "食材"
@@ -41,5 +41,9 @@
           = render 'recipe_fields', f: r
         .links
           = link_to_add_association '＋次の工程を追加', f, :recipes
+
+      .new__input
+        = f.label "コツ・ポイント"
+        = f.text_field :advice
 
       = f.submit "投稿する", class: "new__submit"
