--- a/app/views/foods/index.html.haml
+++ b/app/views/foods/index.html.haml
@@ -45,23 +45,12 @@
 
 
 .main
-  .main__side
-    .main__side__search
-      %h1 検索フォーム
-      %p 料理名で検索
-      = form_with url: search_path, method: :get ,local: true do |f|
-        = f.text_field :search, placeholder: "何を検索しますか？", class: "search__input"
-        = f.submit "検索"
-      %p 食材で検索
-      = form_with url: search_path, method: :get ,local: true do |f|
-        = f.text_field :material, placeholder: "何で検索しますか？", class: "search__input"
-        = f.submit "検索"
-        -# カテゴリーで検索
-        -# ランダムで検索
-        -# 気分で検索
-        -# 選択肢で検索
-        -# いいね数が多い順
-        -# 最新順
+  = render "search"
+  -# ランダムで検索
+  -# 気分で検索
+  -# 選択肢で検索
+  -# いいね数が多い順
+  -# 最新順
 
   .main__contents
     .main__contents__top
