--- a/app/views/foods/search.html.haml
+++ b/app/views/foods/search.html.haml
@@ -1,17 +1,7 @@
 = render "header"
 
 .main
-  .main__side
-    .main__side__search
-      %h1 検索フォーム
-      %p 料理名で検索
-      = form_with url: search_path, method: :get ,local: true do |f|
-        = f.text_field :search, placeholder: "何を検索しますか？", class: "search__input"
-        = f.submit "検索"
-      %p 食材で検索
-      = form_with url: search_path, method: :get ,local: true do |f|
-        = f.text_field :material, placeholder: "何で検索しますか？", class: "search__input"
-        = f.submit "検索"
+  = render "search"
 
   .main__contents
     .main__contents__top
@@ -25,7 +15,7 @@
         .main__food.search__food
           %p
             = food.text
-          = link_to "foods/#{food.id}" ,class: "food__list" do
+          = link_to "/foods/#{food.id}" ,class: "food__list" do
             = image_tag food.image.url, class: "main__food__img"
             .main__food__name
               = food.food_name
