--- a/app/views/foods/mypage.html.haml
+++ b/app/views/foods/mypage.html.haml
@@ -18,8 +18,12 @@
         .list__food
           = image_tag food.image.url, class: "list__food__img"
           .list__food__info
+            %h1 料理名
             %p
               = food.food_name
+            %h1 説明
+            %p
+              = food.text
             .list__food__info__btn
               = link_to "編集する", edit_food_path(food.id), class: "info__btn"
               = link_to "削除する", "/foods/#{food.id}", method: :delete, class: "info__btn delete__btn"
