--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -51,6 +51,10 @@
         &__info {
           padding-left:20px;
           position:relative;
+          > h1 {
+            font-size:17px;
+            font-weight:600;
+          }
           > p {
             width:250px;
             min-height:50px;
@@ -58,6 +62,7 @@
             border: solid 1px rgb(222, 213, 192);
             border-radius:5px;
             padding:5px;
+            margin-bottom:10px;
           }
           &__btn {
             width:280px;
