--- a/app/assets/stylesheets/_new.scss
+++ b/app/assets/stylesheets/_new.scss
@@ -17,7 +17,7 @@
   }
   &__input {
     margin: 40px 0;
-    label {
+    >p ,label {
       font-size:19px;
       font-weight: 600;
     }
@@ -117,4 +117,31 @@
   width:100vw;
   height:100vh;
   background:#fff;
+}
+
+.new__image__preview {
+  width:300px;
+  height:300px;
+  border:solid 1px rgb(180, 180, 180);
+  border-radius:5px;
+  margin:0 auto;
+  > input {
+    width:100%;
+    height:100%;
+    margin:0;
+    display:none;
+  }
+  .new__image__list {
+    text-align:center;
+    img {
+      width:240px;
+      height:240px;
+      border: solid 1px rgb(222, 213, 192);
+    }
+    > p {
+      font-size:15px;
+      font-weight:400;
+      color:gray;
+    }
+  }
 }
