--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -33,11 +33,15 @@
       border-radius:5px;
       padding:0 30px;
       overflow:scroll;
-      > p {
+      > h1 {
         font-size:20px;
         font-weight:600;
         padding:20px 0 10px 20px;
         border-bottom:solid 1px rgb(167, 166, 166);
+      }
+      .no__list {
+        margin-top:20px;
+        color:gray;
       }
       .list__food {
         padding:20px;
@@ -78,8 +82,9 @@
               text-align:center;
               display:inline-block;
               margin-right:10px;
-              width:120px;
+              min-width:120px;
               height:50px;
+              padding:0 10px;
               &:hover {
                 background:#fff;
                 border:solid 1px rgb(255, 158, 48);
