--- a/app/views/good/_good.html.erb
+++ b/app/views/good/_good.html.erb
@@ -37,7 +37,7 @@
     <% end %>
 
   <% else%>
-    <div class="no__good__btn">
+    <div class="no__good__btn my__food">
       <span>
         ♡
       </span>
@@ -48,6 +48,7 @@
         <%= food.goods_count %>
       </span>
     </div>
+    <p class="good__info">自分が投稿したレシピにはいいねは出来ません</p>
   <% end %>
 
 <% else %>
