--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -54,6 +54,10 @@
         text-align:right;
         padding-right:5px;
       }
+      .emphasis {
+        font-weight:600;
+        text-align:center
+      }
     }
   }
   &__bottom {
@@ -106,6 +110,16 @@
       width:100px;
       height:50px;
       margin-top:40px;
+      > p {
+        width:160px;
+        font-size:12px;
+        margin: 5px 0px 0px 10px;
+        padding:5px;
+        color: gray;
+        border:solid 1px gray;
+        border-radius:10px;
+        opacity:0;
+      }
     }
   }
 }
@@ -149,8 +163,3 @@
   }
 }
 
-
-.emphasis {
-  font-weight:600;
-  text-align:center
-}
