--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -174,6 +174,7 @@ header {
       background: #fff;
       padding:20px;
       margin: 0px auto;
+      position:relative;
       h1 {
         font-size:20px;
         font-weight:600;
@@ -187,6 +188,27 @@ header {
           position:relative;
           left:218px;
           margin-bottom:10px;
+        }
+      }
+      .search__list {
+        width:216px;
+        min-height:0px;
+        position:absolute;
+        top:113px;
+        border:solid 1px gray;
+        border-top:none;
+        border-radius: 0 0 5px 5px;
+        background:#fff;
+        p {
+          padding:2px 5px;
+          height:22px;
+          font-size:14px;
+          overflow:hidden;
+          &:hover {
+            background:rgb(255, 223, 153);
+            font-weight:600;
+            cursor:pointer;
+          }
         }
       }
     }
