--- a/app/views/foods/_header.html.haml
+++ b/app/views/foods/_header.html.haml
@@ -1,7 +1,7 @@
 %header
   .header
     .header__top
-      %p#title Bon repas
+      %p.title Bon repas
     .header__bottom
       .header__bottom__sign
         - if user_signed_in?
