--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,10 @@
     <%= render "foods/header" %>
 
     <%= yield %>
+
+    <footer>
+      <p class ="title">Bon Repas
+      </p>
+    </footer>
   </body>
 </html>
