--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -163,3 +163,47 @@
   }
 }
 
+.other {
+  width:70vw;
+  background:#ffffff;
+  margin: 0 auto 40px;
+  padding-bottom:40px;
+  border:solid 1px rgb(255, 123, 0);
+  border-radius:5px;
+  &__foods {
+    width:90%;
+    margin:0 auto;
+    > p {
+      padding:20px 0 10px;
+      margin-bottom:20px;
+      font-weight:600;
+      border-bottom:solid 1px gray;
+    }
+    &__list {
+      display:flex;
+      flex-wrap:wrap;
+      .other__food {
+        width:30%;
+        margin:0px 10px 20px;
+        border: solid 1px rgb(222, 213, 192);
+        border-radius:5px;
+        &:hover {
+          border:solid 1px rgb(0, 110, 255);
+          transition: .4s;
+        }
+        > img {
+          width:100%;
+          height:250px;
+        }
+        > p {
+          color:rgb(125, 148, 10);
+          height:50px;
+          padding:0 10px;
+        }
+        &__info {
+          padding:0 10px 10px;
+        }
+      }
+    }
+  }
+}
